--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "3dfolio-tio",
-  "private": true,
+  "homepage": "https://tiodwisatrio.github.io/tio-portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
+    "gh-pages": "^6.3.0",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-parallax-tilt": "^1.7.304",
     "react-router-dom": "^6.8.1",
-    "react-tilt": "^0.1.4",
     "react-toastify": "^9.1.1",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0"
